--- a/xmlTaskSAX/pom.xml
+++ b/xmlTaskSAX/pom.xml
@@ -22,5 +22,15 @@
        <artifactId>logback-core</artifactId>
        <version>1.1.3</version>
      </dependency>
+     <dependency>
+	   <groupId>junit</groupId>
+	   <artifactId>junit</artifactId>
+	   <version>4.12</version>
+     </dependency>
+     <dependency>
+       <groupId>com.github.stefanbirkner</groupId>
+       <artifactId>system-rules</artifactId>
+       <version>1.16.0</version>
+     </dependency> 
   </dependencies>
 </project>
